<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/language_rv"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_weight="1"
        android:gravity="center" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_rv"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:scaleType="fitXY"/>


    

</LinearLayout>