<resources>
    <string name="app_name">FantasyTranslator</string>
    <string name="tab_text_1">Translator</string>
    <string name="tab_text_2">Favourite languages</string>
    <string name="fab_content_desc">Add to favourites</string>
    <string name="language">dothraki, sith, sindarin...</string>
    <string name="add_favourite">Add to favourites</string>
    <string name="menu_log_out">Log out</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="information" >Many days have I fought in order to finish this application, but alas, my journey has come to an end....</string>
    <string name="description" > This app has been developed for the spring semester 2020 Android hand-in.\n
    It serves as proof that the student has acquired knowledge in regards to the topics discussed during class.</string>
    <string name="author" >Haralambi Nikolaev Tomovski</string>
</resources>
